# encrypted-message

./: .env.test  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: benchmark.yml  development.yml  test.yml
benches/: encrypted_message.rs
benches/encrypted-message/: key_config.rs  main.rs
examples/: advanced_key_config.rs  basic.rs  config_with_external_data.rs  key_config_with_external_data.rs  key_config_with_external_dependency.rs
src/: config.rs  encryption_type.rs  error.rs  key_config.rs  key_derivation.rs  key_generation.rs  key_generator.rs  lib.rs  message.rs  strategy.rs  testing.rs  utilities.rs
src/integrations/: diesel.rs
src/message/: mod.rs
src/message/integrations/: diesel.rs  mod.rs
src/utilities/: base64.rs  key_decoder.rs  key_generation.rs  mod.rs
tests/: config_with_external_data.rs  key_config_with_external_data.rs  key_config_with_external_dependency.rs
tests/common/: key_config.rs  mod.rs
tests/diesel-mysql/: main.rs  schema.rs
tests/diesel-mysql/migrations/2024-04-13-220520_create_users/: up.sql
tests/diesel-postgres/: main.rs  schema.rs
tests/diesel-postgres/migrations/2024-04-13-220520_create_users/: up.sql
