[package]
name = "encrypted-message"
description = "Application-level encryption to safely store sensitive data."
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/RigoOnRails/encrypted-message"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
diesel = { version = "2.1.5", optional = true, features = ["serde_json"] }
hmac = "0.12.1"
once_cell = "1.19.0"
pbkdf2 = "0.12.2"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.8"

[features]
diesel = ["dep:diesel"]
diesel-mysql = ["diesel/mysql"]
diesel-postgres = ["diesel/postgres"]

[dev-dependencies]
dotenvy = "0.15.7"
