[package]
name = "encrypted-message"
description = "Safely encrypt & store serializable data using AES-256-GCM."
keywords = ["encryption", "aes", "diesel"]
categories = ["cryptography"]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/RigoOnRails/encrypted-message"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.0"
diesel = { version = "2.1.5", optional = true, features = ["serde_json"] }
hex = "0.4.3"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rand = "0.8.5"
secrecy = "0.8.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.8"
thiserror = "1.0.58"

[features]
diesel = ["dep:diesel"]
diesel-mysql = ["diesel/mysql"]
diesel-postgres = ["diesel/postgres"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
dotenvy = "0.15.7"
uuid = { version = "1.8.0", features = ["v4"] }

[profile.dev.package.sha2]
opt-level = 1

[[bench]]
name = "encrypted_message"
harness = false
