[package]
name = "encrypted-message"
description = "Safely encrypt & store serializable data using XChaCha20Poly1305."
keywords = ["encryption", "xchacha20poly1305", "diesel"]
categories = ["cryptography"]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/RigoOnRails/encrypted-message"

[dependencies]
base64 = "0.22.0"
chacha20poly1305 = "0.10.1"
diesel = { version = "2.2.3", optional = true, features = ["serde_json"] }
hmac = "0.12.1"
rand = "0.8.5"
secrecy = "0.8.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.8"
thiserror = "1.0.58"

[features]
diesel = ["dep:diesel"]
diesel-mysql = ["diesel/mysql"]
diesel-postgres = ["diesel/postgres"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
dotenvy = "0.15.7"
hex = "0.4.3"
pbkdf2 = "0.12.2"
uuid = { version = "1.8.0", features = ["v4"] }

[[bench]]
name = "encrypted_message"
harness = false
